--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ padding-top: 20px;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
- background-image: url(/images/NROL_186_San_Ynez_2815_Desktop_524f6c1cb9\ \(1\).jpg);
+ background-image: url(./images/NROL_186_San_Ynez_2815_Desktop_524f6c1cb9\ \(1\).jpg);
  
 
 
@@ -132,7 +132,7 @@ padding-top: 20px;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
- background-image: url(/images/Star10_3_062724_DSC_8219_desktop_28f4368e42.jpg);
+ background-image: url(./images/Star10_3_062724_DSC_8219_desktop_28f4368e42.jpg);
  padding-top: 50px;
  
 
@@ -144,7 +144,7 @@ padding-top: 20px;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
- background-image: url(/images/GOES_U_rampengine_DSC_5719_desktop_80888fb22d.jpg);
+ background-image: url(./images/GOES_U_rampengine_DSC_5719_desktop_80888fb22d.jpg);
  padding-top: 50px;
 }
 .fourth-section{
@@ -153,7 +153,7 @@ padding-top: 20px;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
- background-image: url(/images/Eva_Suit_Desktop_alternate_1cf9bae18e\ \(1\).jpg);
+ background-image: url(./images/Eva_Suit_Desktop_alternate_1cf9bae18e\ \(1\).jpg);
  padding-top: 50px;
 }
 .advancing,.spaceflight{
